--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Get GeoJSON features from string matches",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "tape test/**/*.js | faucet"
   },
   "keywords": [
     "geojson",
@@ -15,5 +15,9 @@
   "license": "MIT",
   "dependencies": {
     "minimist": "^1.2.0"
+  },
+  "devDependencies": {
+    "faucet": "0.0.1",
+    "tape": "^4.5.1"
   }
 }
