--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Rodolfo Wilhelmy",
   "license": "MIT",
   "dependencies": {
+    "concat-stream": "^1.5.1",
     "minimist": "^1.2.0",
     "split": "^1.0.0"
   },
